--- a/SMSTimetable/SMSTimetable/packages.config
+++ b/SMSTimetable/SMSTimetable/packages.config
@@ -1,17 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
-  <package id="Google.Protobuf" version="3.6.0" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net461" />
   <package id="Hangfire.Core" version="1.6.20" targetFramework="net461" />
   <package id="Hangfire.MySqlStorage.MysqlConnector" version="1.0.5.1" targetFramework="net461" />
   <package id="HttpToSocks5Proxy" version="1.0.5" targetFramework="net461" />
   <package id="JsonFx" version="2.0.1209.2802" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net461" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite" version="2.1.0" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite.Core" version="2.1.0" targetFramework="net461" />
-  <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
+  <package id="Microsoft.NETCore.Platforms" version="2.1.1" targetFramework="net461" />
   <package id="Microsoft.NETCore.Portable.Compatibility" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="MySqlConnector" version="0.43.0" targetFramework="net461" />
+  <package id="MySqlConnector" version="0.46.1" targetFramework="net461" />
   <package id="NETStandard.Library" version="2.0.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net461" />
@@ -27,7 +31,7 @@
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net461" />
   <package id="System.Console" version="4.3.1" targetFramework="net461" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net461" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.5.1" targetFramework="net461" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
@@ -40,7 +44,7 @@
   <package id="System.Linq" version="4.3.0" targetFramework="net461" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
   <package id="System.Memory" version="4.5.1" targetFramework="net461" />
-  <package id="System.Net.Http" version="4.3.3" targetFramework="net461" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net461" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net45" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net461" />
@@ -51,7 +55,7 @@
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.1" targetFramework="net461" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
@@ -71,5 +75,5 @@
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net461" />
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net461" />
-  <package id="Telegram.Bot" version="14.8.0" targetFramework="net461" />
+  <package id="Telegram.Bot" version="14.10.0" targetFramework="net461" />
 </packages>
